--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -90,14 +90,17 @@
   <ItemGroup>
     <Compile Include="AdresseRepository.cs" />
     <Compile Include="DataProviders\DataProviderBase.cs" />
+    <Compile Include="DataProviders\FoodWasteDataProvider.cs" />
     <Compile Include="DataProviders\MySqlDataProvider.cs" />
     <Compile Include="DataProxies\DataProxyHelper.cs" />
+    <Compile Include="DataProxies\FoodWaste\TranslationInfoProxy.cs" />
     <Compile Include="DataProxies\Fælles\SystemProxy.cs" />
     <Compile Include="DataProxies\Kalender\AftaleProxy.cs" />
     <Compile Include="DataProxies\Kalender\BrugeraftaleProxy.cs" />
     <Compile Include="DataProxies\Kalender\BrugerProxy.cs" />
     <Compile Include="DomainObjectBuilder.cs" />
     <Compile Include="FinansstyringRepository.cs" />
+    <Compile Include="FoodWaste\SystemDataRepository.cs" />
     <Compile Include="FællesRepository.cs" />
     <Compile Include="KalenderRepository.cs" />
     <Compile Include="KonfigurationRepository.cs" />
