--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -15,6 +15,7 @@
   <connectionStrings>
     <clear/>
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb; DATABASE=foodwaste; UID=ODBC"/>
   </connectionStrings>
   <appSettings>
     <add key="DebitorSaldoOverNul" value="False"/>
