--- a/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
+++ b/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FoodWasteObjectMapper.cs" />
     <Compile Include="IoC\ConfigurationProvider.cs" />
     <Compile Include="ObjectMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
