--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -106,6 +106,18 @@
           </identity>
         </endpoint>
       </service>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service>
     </services>
     <client>
       <endpoint name="AdressekartotekServiceIntegrationstest" address="http://localhost/osintranetdev/adressekartotekservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
