--- a/OSDevGrp.OSIntranet.Tests/packages.config
+++ b/OSDevGrp.OSIntranet.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.21.1" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.0" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.5" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
