--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <section name="iocConfiguration" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.ConfigurationSectionHandler, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
+    <section name="basicSecurityTokenServiceConfiguration" type="OSDevGrp.OSIntranet.Security.Configuration.ConfigurationProvider, OSDevGrp.OSIntranet.Security"/>
   </configSections>
   <iocConfiguration>
     <container type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Windsor.Container, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
@@ -12,6 +13,15 @@
       <add name="intranet" type="OSDevGrp.OSIntranet.Infrastructure.IoC.ConfigurationProvider, OSDevGrp.OSIntranet.Infrastructure"/>
     </containerConfigurationProviders>
   </iocConfiguration>
+  <basicSecurityTokenServiceConfiguration>
+    <issuerTokenName value="http://localhost:8010/sts"/>
+    <signingCertificate value="CN=OSDevGrp.OSIntranet.Services"/>
+    <trustedRelyingPartyCollection>
+      <clear/>
+      <add name="localhost" value="http://localhost"/>
+      <add name="mother" value="http://mother"/>
+    </trustedRelyingPartyCollection>
+  </basicSecurityTokenServiceConfiguration>
   <connectionStrings>
     <clear/>
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
@@ -126,6 +136,10 @@
           </identity>
         </endpoint>
       </service>
+      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
+        <endpoint address="WSTrustFeb05" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
+        <endpoint address="WSTrust13" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+      </service>
     </services>
     <client>
       <endpoint name="AdresseRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
@@ -157,6 +171,11 @@
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
+        </behavior>
+        <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
+          <serviceMetadata httpGetEnabled="False"/>
+          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
