--- a/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
+++ b/OSDevGrp.OSIntranet.Infrastructure/OSDevGrp.OSIntranet.Infrastructure.csproj
@@ -81,8 +81,10 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FoodWasteFaultExceptionBuilder.cs" />
     <Compile Include="FoodWasteObjectMapper.cs" />
     <Compile Include="IoC\ConfigurationProvider.cs" />
     <Compile Include="ObjectMapper.cs" />
