--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <section name="iocConfiguration" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.ConfigurationSectionHandler, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
+    <section name="basicSecurityTokenServiceConfiguration" type="OSDevGrp.OSIntranet.Security.Configuration.ConfigurationProvider, OSDevGrp.OSIntranet.Security"/>
   </configSections>
 
   <iocConfiguration>
@@ -13,6 +14,16 @@
       <add name="intranet" type="OSDevGrp.OSIntranet.Infrastructure.IoC.ConfigurationProvider, OSDevGrp.OSIntranet.Infrastructure"/>
     </containerConfigurationProviders>
   </iocConfiguration>
+
+  <basicSecurityTokenServiceConfiguration>
+    <issuerTokenName value="http://localhost:8010/sts"/>
+    <signingCertificate value="CN=OSDevGrp.OSIntranet.Services"/>
+    <trustedRelyingPartyCollection>
+      <clear/>
+      <add name="localhost" value="http://localhost"/>
+      <add name="mother" value="http://mother"/>
+    </trustedRelyingPartyCollection>
+  </basicSecurityTokenServiceConfiguration>
 
   <connectionStrings>
     <clear/>
@@ -118,6 +129,10 @@
           </identity>
         </endpoint>
       </service>
+      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
+        <endpoint address="WSTrustFeb05" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
+        <endpoint address="WSTrust13" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+      </service>
     </services>
     <client>
       <endpoint name="AdressekartotekServiceIntegrationstest" address="http://localhost/osintranetdev/adressekartotekservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
@@ -140,6 +155,11 @@
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
       </endpoint>
+      <endpoint name="FoodWasteSystemDataServiceIntegrationstest" address="http://localhost/osintranetdev/foodwastesystemdataservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
+        <identity>
+          <dns value="OSDevGrp.OSIntranet.Services"/>
+        </identity>
+      </endpoint>
       <endpoint name="AdresseRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService"/>
       <endpoint name="FinansstyringRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService"/>
       <endpoint name="FællesRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService"/>
@@ -157,6 +177,11 @@
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
+        </behavior>
+        <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
+          <serviceMetadata httpGetEnabled="False"/>
+          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
