--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -14,12 +14,12 @@
     </containerConfigurationProviders>
   </iocConfiguration>
   <basicSecurityTokenServiceConfiguration>
-    <issuerTokenName value="http://localhost:8010/sts"/>
-    <signingCertificate value="CN=OSDevGrp.OSIntranet.Services"/>
+    <issuerTokenName address="http://localhost:8010/sts"/>
+    <signingCertificate subjectName="CN=OSDevGrp.OSIntranet.Services"/>
     <trustedRelyingPartyCollection>
       <clear/>
-      <add name="localhost" value="http://localhost"/>
-      <add name="mother" value="http://mother"/>
+      <add address="http://localhost"/>
+      <add address="http://mother"/>
     </trustedRelyingPartyCollection>
   </basicSecurityTokenServiceConfiguration>
   <connectionStrings>
