--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -21,6 +21,21 @@
       <add address="http://localhost"/>
       <add address="http://mother"/>
     </trustedRelyingPartyCollection>
+    <claimCollection>
+      <clear/>
+      <add claimType="urn://osdevgrp/foodwaste/security/systemmanagement">
+        <conditions>
+          <clear/>
+          <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="mrgottham@gmail.com"/>
+        </conditions>
+      </add>
+      <add claimType="urn://osdevgrp/foodwaste/security/user">
+        <conditions>
+          <clear/>
+          <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="^(?(&quot;&quot;)(&quot;&quot;.+?(?&lt;!\\)&quot;&quot;@)|(([0-9a-z]((\.(?!\.))|[-!#\$%&amp;'\*\+/=\?\^`\{\}\|~\w])*)(?&lt;=[0-9a-z])@))(?(\[)(\[(\d{1,3}\.){3}\d{1,3}\])|(([0-9a-z][-\w]*[0-9a-z]*\.)+[a-z0-9][\-a-z0-9]{0,22}[a-z0-9]))$"/>
+        </conditions>
+      </add>
+    </claimCollection>
   </basicSecurityTokenServiceConfiguration>
   <connectionStrings>
     <clear/>
@@ -59,6 +74,15 @@
           </security>
         </binding>
       </wsHttpBinding>
+      <ws2007FederationHttpBinding>
+        <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
+          <security mode="Message">
+            <message issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
+              <issuer address="http://localhost:8010/sts" binding="wsHttpBinding"/>
+            </message>
+          </security>
+        </binding>
+      </ws2007FederationHttpBinding>
       <netTcpBinding>
         <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:05:00">
           <security mode="Transport">
@@ -124,13 +148,13 @@
           </identity>
         </endpoint>
       </service>
-      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
@@ -172,8 +196,25 @@
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
+        <behavior name="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
+          <serviceMetadata httpGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <serviceCredentials>
+            <issuedTokenAuthentication>
+              <knownCertificates>
+                <add findValue="OSDevGrp.OSIntranet.Services" storeLocation ="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+              </knownCertificates>
+            </issuedTokenAuthentication>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <clientCertificate>
+              <authentication certificateValidationMode="PeerTrust"/>
+            </clientCertificate>
+          </serviceCredentials>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
+          <ioc/>
+        </behavior>
         <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
-          <serviceMetadata httpGetEnabled="False"/>
+          <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
@@ -191,7 +232,6 @@
       </behaviorExtensions>
     </extensions>
   </system.serviceModel>
-  <!--
   <system.diagnostics>
     <sharedListeners>
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.svclog"/>
@@ -209,5 +249,4 @@
       </source>
     </sources>
   </system.diagnostics>
-  -->
 </configuration>
