--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -23,6 +23,21 @@
       <add address="http://localhost"/>
       <add address="http://mother"/>
     </trustedRelyingPartyCollection>
+    <claimCollection>
+      <clear/>
+      <add claimType="urn://osdevgrp/foodwaste/security/systemmanagement">
+        <conditions>
+          <clear/>
+          <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="mrgottham@gmail.com"/>
+        </conditions>
+      </add>
+      <add claimType="urn://osdevgrp/foodwaste/security/user">
+        <conditions>
+          <clear/>
+          <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="^(?(&quot;&quot;)(&quot;&quot;.+?(?&lt;!\\)&quot;&quot;@)|(([0-9a-z]((\.(?!\.))|[-!#\$%&amp;'\*\+/=\?\^`\{\}\|~\w])*)(?&lt;=[0-9a-z])@))(?(\[)(\[(\d{1,3}\.){3}\d{1,3}\])|(([0-9a-z][-\w]*[0-9a-z]*\.)+[a-z0-9][\-a-z0-9]{0,22}[a-z0-9]))$"/>
+        </conditions>
+      </add>
+    </claimCollection>
   </basicSecurityTokenServiceConfiguration>
 
   <connectionStrings>
@@ -51,6 +66,15 @@
           </security>
         </binding>
       </wsHttpBinding>
+      <ws2007FederationHttpBinding>
+        <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
+          <security mode="Message">
+            <message issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
+              <issuer address="http://localhost:8010/sts" binding="wsHttpBinding"/>
+            </message>
+          </security>
+        </binding>
+      </ws2007FederationHttpBinding>
       <netTcpBinding>
         <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" transactionFlow="true" maxReceivedMessageSize="16777216" sendTimeout="00:03:00">
           <security mode="Transport">
@@ -117,13 +141,13 @@
           </identity>
         </endpoint>
       </service>
-      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
@@ -155,7 +179,7 @@
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
       </endpoint>
-      <endpoint name="FoodWasteSystemDataServiceIntegrationstest" address="http://localhost/osintranetdev/foodwastesystemdataservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
+      <endpoint name="FoodWasteSystemDataServiceIntegrationstest" address="http://localhost/osintranetdev/foodwastesystemdataservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
         <identity>
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
@@ -178,9 +202,26 @@
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
+        <behavior name="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
+          <serviceMetadata httpGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="True"/>
+          <serviceCredentials>
+            <issuedTokenAuthentication>
+              <knownCertificates>
+                <add findValue="OSDevGrp.OSIntranet.Services" storeLocation ="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+              </knownCertificates>
+            </issuedTokenAuthentication>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <clientCertificate>
+              <authentication certificateValidationMode="PeerTrust"/>
+            </clientCertificate>
+          </serviceCredentials>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
+          <ioc/>
+        </behavior>
         <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
-          <serviceMetadata httpGetEnabled="False"/>
-          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <serviceMetadata httpGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="True"/>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
       </serviceBehaviors>
@@ -210,7 +251,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
 
-  <!--
   <system.diagnostics>
     <sharedListeners>
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.Tests.svclog"/>
@@ -228,5 +268,4 @@
       </source>
     </sources>
   </system.diagnostics>
-  -->
 </configuration>
