--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -78,7 +78,8 @@
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost:8010/sts" binding="wsHttpBinding"/>
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding"/>
+              <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex"/>
             </message>
           </security>
         </binding>
@@ -161,8 +162,9 @@
         </endpoint>
       </service>
       <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
-        <endpoint address="WSTrustFeb05" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
-        <endpoint address="WSTrust13" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+        <endpoint address="" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
+        <endpoint address="" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+        <endpoint address="mex" binding="wsHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <client>
@@ -232,7 +234,7 @@
       </behaviorExtensions>
     </extensions>
     <diagnostics>
-      <messageLogging logEntireMessage="true" logMalformedMessages="false" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="false" maxMessagesToLog="3000" maxSizeOfMessageToLog="10000"/>
+      <messageLogging logEntireMessage="true" logMalformedMessages="false" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="false" maxMessagesToLog="8192" maxSizeOfMessageToLog="1048576"/>
     </diagnostics>
   </system.serviceModel>
   <system.diagnostics>
