--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -77,7 +77,7 @@
       <ws2007FederationHttpBinding>
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
-            <message issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
+            <message negotiateServiceCredential="false" issuedKeyType="AsymmetricKey" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
               <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding"/>
               <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex"/>
             </message>
@@ -202,9 +202,10 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <serviceCredentials>
-            <issuedTokenAuthentication>
+            <!-- Set allowUntrustedRsaIssuers to true to allow self-signed, asymmetric key based SAML tokens -->
+            <issuedTokenAuthentication allowUntrustedRsaIssuers="true">
               <knownCertificates>
-                <add findValue="OSDevGrp.OSIntranet.Services" storeLocation ="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
               </knownCertificates>
             </issuedTokenAuthentication>
             <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
